Update Thorntail Config